--- a/views/calendar.html
+++ b/views/calendar.html
@@ -5,7 +5,9 @@
 <meta charset='utf-8' />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href='main.css' rel='stylesheet' />
+<link href='/public/css/main.css' rel='stylesheet'/>
 <script src='main.js'></script>
+<script src='/public/js/main.js'></script>
 <script>
 
   document.addEventListener('DOMContentLoaded', function() {
