--- a/views/info.html
+++ b/views/info.html
@@ -3,7 +3,9 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="header.css">
+        <link rel="stylesheet" type="text/css" href="/public/css/header.css">
         <link rel="stylesheet" type="text/css" href="info.css">
+        <link rel="stylesheet" type="text/css" href="/public/css/info.css">
         <title>공지사항</title>
     </head>
     <body>
