--- a/views/login.html
+++ b/views/login.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="header.css">
+        <link rel="stylesheet" type="text/css" href="/public/css/header.css">
         <link rel="stylesheet" type="text/css" href="login.css">
+        <link rel="stylesheet" type="text/css" href="/public/css/login.css">
         <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
     </head>
         <section class="login-form">
