--- a/views/mypage.html
+++ b/views/mypage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="mypage.css">
     <link rel="stylesheet" type="text/css" href="header.css">
+    <link rel="stylesheet" type="text/css" href="/public/css/header.css">
     <link rel="stylesheet" type="text/css" href="total.css">
 </head>
 <body>
