--- a/views/index.html
+++ b/views/index.html
@@ -41,8 +41,8 @@
                 <i class="fa-solid fa-mobile-screen"></i>
                 <span>해야짐 알아보기</span>
             </a>
-            <img src="./img/mainPageImg.jpg" id="main__section1__mainImg" alt="">
-            <img src="./img/mainPageRoundImg.jpg" id="main__section1__roundImg" alt="">
+            <img src="../img/mainPageImg.jpg" id="main__section1__mainImg" alt="">
+            <img src="../img/mainPageRoundImg.jpg" id="main__section1__roundImg" alt="">
         </section>
         <hr>
         <section id="main__section2">
@@ -139,7 +139,7 @@
             <div id="footer__contact">
                 <p>고객센터</p>
                 <div id="footer__contact__kakao">
-                    <img src="./img/kakaotalk_sharing_btn_medium.png" >
+                    <img src="../img/kakaotalk_sharing_btn_medium.png" >
                     <span>카카오톡 상담</span>
                 </div>
                 <span>평일 09:00 ~ 18:00(점심시간 13:00 ~ 14:00)</span>
