--- a/views/calendar.html
+++ b/views/calendar.html
@@ -4,8 +4,9 @@
 <title>해야GYM</title>
 <meta charset='utf-8' />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href='/public/css/main.css' rel='stylesheet'/>
-<script src='/public/js/main.js'></script>
+<link href='../public/css/main.css' rel='stylesheet'/>
+<script src='../public/js/main.js'></script>
+<script src="../public/js/main.min.js"></script>
 <script>
 
   document.addEventListener('DOMContentLoaded', function() {
