--- a/Web/views/index.html
+++ b/Web/views/index.html
@@ -22,10 +22,10 @@
             </a>
         </div>
         <div id="header__main">
-            <img src="/img/logo.png" id="header__logo">
+            <img src="./img/logo.png" id="header__logo">
             <nav>
-                <a href="/auth">로그인</a>
-                <a href="/auth">회원가입</a>
+                <a href="/signin">로그인</a>
+                <a href="/signup">회원가입</a>
             </nav>
         </div>
     </header>
@@ -41,8 +41,8 @@
                 <i class="fa-solid fa-mobile-screen"></i>
                 <span>해야짐 알아보기</span>
             </a>
-            <img src="/img/mainPageImg.png" id="main__section1__mainImg" alt="">
-            <img src="/img/mainPageRoundImg.png" id="main__section1__roundImg" alt="">
+            <img src="./img/mainPageImg.jpg" id="main__section1__mainImg" alt="">
+            <img src="./img/mainPageRoundImg.jpg" id="main__section1__roundImg" alt="">
         </section>
         <hr>
         <section id="main__section2">
@@ -61,7 +61,7 @@
             <div id="main__section2__benefits">
                 <div class="main__section2__benefit">
                     <div class="mini-logo">
-                        <img src="../public/img/logo.png" width="30px" alt="">
+                        <img src="./img/logo.png" width="30px" alt="">
                         <span>해야짐</span>
                     </div>
                     <i class="fa-solid fa-dumbbell"></i>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="main__section2__benefit">
                     <div class="mini-logo">
-                        <img src="../public/img/logo.png" width="30px" alt="">
+                        <img src="./img/logo.png" width="30px" alt="">
                         <span>해야짐</span>
                     </div>
                     <i class="fa-solid fa-heart-pulse"></i>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="main__section2__benefit">
                     <div class="mini-logo">
-                        <img src="../public/img/logo.png" width="30px" alt="">
+                        <img src="./img/logo.png" width="30px" alt="">
                         <span>해야짐</span>
                     </div>
                     <i class="fa-solid fa-users"></i>
@@ -103,12 +103,12 @@
                 </div>
                 <div class="main__section2__benefit">
                     <div class="mini-logo">
-                        <img src="../public/img/logo.png" width="30px" alt="">
+                        <img src="./img/logo.png" width="30px" alt="">
                         <span>해야짐</span>
                     </div>
                     <i class="fa-solid fa-calendar-days"></i>
                     <p>
-                        <a href="/calendar"><strong>운동 기록달력</strong><br></a>
+                        <strong>운동 기록달력</strong><br>
                         (일별로 내 운동 확인)
                     </p>
                     <span>
@@ -139,7 +139,7 @@
             <div id="footer__contact">
                 <p>고객센터</p>
                 <div id="footer__contact__kakao">
-                    <img src="img/kakaotalk_sharing_btn_medium.png" >
+                    <img src="./img/kakaotalk_sharing_btn_medium.png" >
                     <span>카카오톡 상담</span>
                 </div>
                 <span>평일 09:00 ~ 18:00(점심시간 13:00 ~ 14:00)</span>
