--- a/Web/views/mypage.html
+++ b/Web/views/mypage.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <link rel="stylesheet" type="text/css" href="../public/css/mypage.css">
-    <link rel="stylesheet" type="text/css" href="../public/css/header.css">
+    <link rel="stylesheet" href="mypage.css">
+    <link rel="stylesheet" type="text/css" href="header.css">
+    <link rel="stylesheet" type="text/css" href="/public/css/header.css">
 </head>
 <body>
+    <div class="header">
+        <div class="page_name">
+            HaeYaGym
+        </div>
+        <ul class="nav">
+            <li><a href="#">공지사항</a></li>
+            <li><a href="#">커뮤니티</a></li>
+            <li><a href="#">운동기록</a></li>
+            <li><a href="#">운동장소</a></li>
+            <li><a href="#">마이페이지</a></li>
+        </ul>
+</div>
     <div class="card">
         <div class="card-header">
             <img src="haeyagym_logo.png" alt="Profile Image" class="profile-img">
@@ -20,7 +33,7 @@
         </div>
 
         <div class="social-links">
-            <a href="#" class="fab fa-google social-icota0985   !eon"></a>
+            <a href="#" class="fab fa-google social-icon"></a>
             <a href="#" class="fab fa-twitter social-icon"></a>
             <a href="#" class="fab fa-facebook social-icon"></a>
         </div>
