--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -180,8 +180,7 @@ section {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #4C94FA;
-    color: white;
+    color: black;
     width: fit-content;
     padding: 0 6px 0 1px;
     font-size: 0.75rem;
