--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div id="header__main">
-            <img src="/img/logo.png" id="header__logo">
+            <img src="../public/image/logo.png" id="header__logo">
             <nav>
                 <a href="/auth">로그인</a>
                 <a href="/auth">회원가입</a>
@@ -41,8 +41,8 @@
                 <i class="fa-solid fa-mobile-screen"></i>
                 <span>해야짐 알아보기</span>
             </a>
-            <img src="/img/mainPageImg.png" id="main__section1__mainImg" alt="">
-            <img src="/img/mainPageRoundImg.png" id="main__section1__roundImg" alt="">
+            <img src="../public/image/mainPageImg.png" id="main__section1__mainImg" alt="">
+            <img src="../public/image/mainPageRoundImg.png" id="main__section1__roundImg" alt="">
         </section>
         <hr>
         <section id="main__section2">
@@ -61,7 +61,7 @@
             <div id="main__section2__benefits">
                 <div class="main__section2__benefit">
                     <div class="mini-logo">
-                        <img src="../public/img/logo.png" width="30px" alt="">
+                        <img src="../public/image/logo.png" width="30px" alt="">
                         <span>해야짐</span>
                     </div>
                     <i class="fa-solid fa-dumbbell"></i>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="main__section2__benefit">
                     <div class="mini-logo">
-                        <img src="../public/img/logo.png" width="30px" alt="">
+                        <img src="../public/image/logo.png" width="30px" alt="">
                         <span>해야짐</span>
                     </div>
                     <i class="fa-solid fa-heart-pulse"></i>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="main__section2__benefit">
                     <div class="mini-logo">
-                        <img src="../public/img/logo.png" width="30px" alt="">
+                        <img src="../public/image/logo.png" width="30px" alt="">
                         <span>해야짐</span>
                     </div>
                     <i class="fa-solid fa-users"></i>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="main__section2__benefit">
                     <div class="mini-logo">
-                        <img src="../public/img/logo.png" width="30px" alt="">
+                        <img src="../public/image/logo.png" width="30px" alt="">
                         <span>해야짐</span>
                     </div>
                     <i class="fa-solid fa-calendar-days"></i>
