이미지 파일, 링크 수정

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HaeYaGYM</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div id="header__main">
-            <img src="/img/logo.png" id="header__logo">
+            <img src="/logo/logo.png" id="header__logo">
             <nav>
                 <a href="/auth">로그인</a>
                 <a href="/auth">회원가입</a>
@@ -41,8 +41,8 @@
                 <i class="fa-solid fa-mobile-screen"></i>
                 <span>해야짐 알아보기</span>
             </a>
-            <img src="/img/mainPageImg.jpg" id="main__section1__mainImg" alt="">
-            <img src="/img/mainPageRoundImg.jpg" id="main__section1__roundImg" alt="">
+            <img src="/img/mainPageImg.png" id="main__section1__mainImg" alt="">
+            <img src="/img/mainPageRoundImg.png" id="main__section1__roundImg" alt="">
         </section>
         <hr>
         <section id="main__section2">
@@ -61,7 +61,7 @@
             <div id="main__section2__benefits">
                 <div class="main__section2__benefit">
                     <div class="mini-logo">
-                        <img src="/img/logo.png" width="30px" alt="">
+                        <img src="/logo/logo.png" width="30px" alt="">
                         <span>해야짐</span>
                     </div>
                     <i class="fa-solid fa-dumbbell"></i>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="main__section2__benefit">
                     <div class="mini-logo">
-                        <img src="./img/logo.png" width="30px" alt="">
+                        <img src="logo/logo.png" width="30px" alt="">
                         <span>해야짐</span>
                     </div>
                     <i class="fa-solid fa-heart-pulse"></i>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="main__section2__benefit">
                     <div class="mini-logo">
-                        <img src="./img/logo.png" width="30px" alt="">
+                        <img src="logo/logo.png" width="30px" alt="">
                         <span>해야짐</span>
                     </div>
                     <i class="fa-solid fa-users"></i>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="main__section2__benefit">
                     <div class="mini-logo">
-                        <img src="./img/logo.png" width="30px" alt="">
+                        <img src="logo/logo.png" width="30px" alt="">
                         <span>해야짐</span>
                     </div>
                     <i class="fa-solid fa-calendar-days"></i>
