이미지 파일, 링크 수정

--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div id="header__main">
-            <img src="/logo/logo.png" id="header__logo">
+            <a href="/"><img src="/logo/logo.png" id="header__logo"></a>
             <nav>
                 <a href="/auth">로그인</a>
                 <a href="/auth">회원가입</a>
