--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
     width: 100%;
     font-family: 'Noto Sans KR', sans-serif;
@@ -180,8 +179,7 @@ section {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #4C94FA;
-    color: white;
+    color: black;
     width: fit-content;
     padding: 0 6px 0 1px;
     font-size: 0.75rem;
