--- a/views/index.html
+++ b/views/index.html
@@ -24,8 +24,8 @@
         <div id="header__main">
             <a href="/"><img src="/logo/logo.png" id="header__logo"></a>
             <nav>
-                <a href="/auth">로그인</a>
-                <a href="/auth">회원가입</a>
+                <a href="/signin">로그인</a>
+                <a href="/signup">회원가입</a>
             </nav>
         </div>
     </header>
