--- a/views/index.html
+++ b/views/index.html
@@ -7,8 +7,8 @@
     <title>HaeYaGYM</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../public/css/reset.css">
+    <link rel="stylesheet" href="../public/css/styles.css">
 </head>
 <body>
     <header>
@@ -24,8 +24,8 @@
         <div id="header__main">
             <a href="/"><img src="/logo/logo.png" id="header__logo"></a>
             <nav>
-                <a href="/signin">로그인</a>
-                <a href="/signup">회원가입</a>
+                <a href="/auth/sign_in">로그인</a>
+                <a href="/sign_up">회원가입</a>
             </nav>
         </div>
     </header>
