--- a/views/sign_in.html
+++ b/views/sign_in.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
+        <title>HaeYaGYM</title>
         <link rel="stylesheet" type="text/css" href="../public/css/join.css">
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="../public/js/join.js"></script>
