--- a/views/sign_up.html
+++ b/views/sign_up.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="/css/join.css">
+        <title>HaeYaGYM</title>
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="/js/join.js"></script>
     </head>
