sign_up 간소화 및 id변경

--- a/views/sign_in.html
+++ b/views/sign_in.html
@@ -45,14 +45,8 @@
           <p>OR</p>
         </div>
         <!-- google button -->
-        <button class="google__btn">
-          <i class="fa fa-google"></i>
-          Sign in with Google
-        </button>
-        <!-- google button -->
-        <button class="instagram__btn">
-          <i class="fa fa-instagram"></i>
-          Sign in with instagram
+        <button class="sign_up__btn">
+          <a href="sign_up.html">Sign Up</a>
         </button>
       </div>
       
