--- a/public/css/join.css
+++ b/public/css/join.css
@@ -175,35 +175,35 @@ body {
     border: none;
     line-height: 40px;
   }
-  .google__btn.google__btn,
-  .instagram__btn.google__btn {
+  .sign_up__btn.sign_up__btn,
+  .instagram__btn.sign_up__btn {
     background: #5b90f0;
     color: white;
     box-shadow: 0 15px 30px rgba(91, 144, 240, 0.36);
     transition: 0.2s linear;
   }
-  .google__btn.google__btn .fa,
-  .instagram__btn.google__btn .fa {
+  .sign_up__btn.sign_up__btn .fa,
+  .instagram__btn.sign_up__btn .fa {
     font-size: 20px;
     padding: 0 5px 0 0;
   }
-  .google__btn.google__btn:hover,
-  .instagram__btn.google__btn:hover {
+  .sign_up__btn.sign_up__btn:hover,
+  .instagram__btn.sign_up__btn:hover {
     box-shadow: 0 0 0 rgba(91, 144, 240, 0);
   }
-  .google__btn.instagram__btn,
+  .sign_up__btn.instagram__btn,
   .instagram__btn.instagram__btn {
     background: #25282d;
     color: white;
     box-shadow: 0 15px 30px rgba(37, 40, 45, 0.36);
     transition: 0.2s linear;
   }
-  .google__btn.instagram__btn .fa,
+  .sign_up__btn.instagram__btn .fa,
   .instagram__btn.instagram__btn .fa {
     font-size: 20px;
     padding: 0 5px 0 0;
   }
-  .google__btn.instagram__btn:hover,
+  .sign_up__btn.instagram__btn:hover,
   .instagram__btn.instagram__btn:hover {
     box-shadow: 0 0 0 rgba(37, 40, 45, 0);
   }
@@ -251,4 +251,9 @@ body {
 
   .birth_box > #birth, #month, #day{
     width: 23.4%;
+  }
+
+  a{
+    text-decoration: none;
+    color: white;
   }
