초기화 삭제

--- a/views/sign_in.html
+++ b/views/sign_in.html
@@ -16,9 +16,6 @@
           <li>
             <a href="#" id="signin">로그인</a>
           </li>
-          <li>
-            <a href="#" id="reset">초기화</a>
-          </li>
         </ul>
         
         <!-- Form -->
@@ -46,7 +43,7 @@
         </div>
         <!-- google button -->
         <button class="sign_up__btn">
-          <a href="sign_up.html">Sign Up</a>
+          <a href="/signup">Sign Up</a>
         </button>
       </div>
       
