--- a/views/sign_in.html
+++ b/views/sign_in.html
@@ -46,7 +46,7 @@
         </div>
         <!-- google button -->
         <button class="sign_up__btn">
-          <a href="sign_up.html">Sign Up</a>
+          <a href="/auth/sign_up">Sign Up</a>
         </button>
       </div>
       
