--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,16 @@
         <div id="header__main">
             <a href="/"><img src="/logo/logo.png" id="header__logo"></a>
             <nav>
-                <a href="/signin">로그인</a>
-                <a href="/signup">회원가입</a>
+                <% if(isOwner == false) {%>
+                <a href="/auth/sign_in">로그인</a>
+                <a href="/auth/sign_up">회원가입</a>
+                <% }else{ %>
+                    <%= nick %>
+                    <a href="/MyPage">마이페이지</a> 
+                    <a href="/Calendar">운동달력</a> 
+                    <a href="/Board">커뮤니티</a> 
+                    <a href="/auth/logout">Logout</a>   
+                    <% } %>
             </nav>
         </div>
     </header>
