--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -22,7 +22,7 @@
         </ul>
         
         <!-- Form -->
-        <form  action="" method="post">
+        <form  action="/auth/sign_up_process" method="post">
           
           <!-- email input -->
           <div class="first-input input__block first-input__block">
@@ -72,9 +72,7 @@
           </div> -->
           <!-- sign in button -->
 
-          <button class="signin__btn">
-            Sign Up
-          </button>
+          <input type="submit" class="signin__btn" value="Sign Up">
         </form>
         <!-- separator -->
       </div>
