--- a/views/sign_up.html
+++ b/views/sign_up.html
@@ -4,10 +4,30 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="/css/join.css">
+        <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" href="css/header.css">
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="/js/join.js"></script>
     </head>
     <body>
+      <header>
+        <div id="header__mobileAd">
+            <span>
+                <strong>해야짐</strong>이 처음이신가요? 지금 바로 체험해보세요!
+            </span>
+            <a href="">
+                <i class="fa-solid fa-mobile-screen"></i>
+                <span>앱 다운로드</span>
+            </a>
+        </div>
+        <div id="header__main">
+            <a href="/"><img src="/logo/logo.png" id="header__logo"></a>
+            <nav>
+                <a href="/signin">로그인</a>
+                <a href="/signup">회원가입</a>
+            </nav>
+        </div>
+    </header>
       <div class="container">
         <!-- Heading -->
         
@@ -75,7 +95,30 @@
         <!-- separator -->
       </div>
     </div>
-      <footer>
-      </footer>
+    <footer>
+      <div>
+          <nav id="footer__nav">
+              <a href="">ⓒHaeuagym.co.kr</a>
+              <a href="">이용약관</a>
+              <a href="">운영정책</a>
+              <a href="">개인정보처리방침</a>
+              <a href="">환불규정</a>
+          </nav>
+          <div id="footer__info">
+              <strong>(주)해야짐</strong><br> 
+              <span>대표 이혁주 | 8221 서울시 구로구 경인로 445 ([구]고척동 62-160) 동양미래대학교</span><br>
+              <span>(주)해야짐은 통신판매중개자이며 통신판매의 당사자가 아닙니다. 따라서 (주)해야짐은 상품, 거래정보 및 거래에 대하여 책임을 지지 않습니다.</span>
+          </div>  
+          <div id="footer__contact">
+              <p>고객센터</p>
+              <div id="footer__contact__kakao">
+                  <img src="img/kakaotalk_sharing_btn_medium.png" >
+                  <span>카카오톡 상담</span>
+              </div>
+              <span>평일 09:00 ~ 18:00(점심시간 13:00 ~ 14:00)</span>
+              <span>주말 및 공휴일은 쉽니다..</span>
+          </div>
+      </div>
+  </footer>
     </body>
 </html>
