--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,10 @@
     <title>HaeYaGYM</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/header.css">
 </head>
 <body>
     <header>
@@ -32,7 +34,7 @@
                     <a href="/MyPage">마이페이지</a> 
                     <a href="/Calendar">운동달력</a> 
                     <a href="/Board">커뮤니티</a> 
-                    <a href="/auth/logout">Logout</a>   
+                    <a href="/auth/logout">로그아웃</a>   
                     <% } %>
             </nav>
         </div>
@@ -116,7 +118,7 @@
                     </div>
                     <i class="fa-solid fa-calendar-days"></i>
                     <p>
-                        <a href="/calendar"><strong>운동 기록달력</strong><br></a>
+                        <strong>운동 기록달력</strong><br>
                         (일별로 내 운동 확인)
                     </p>
                     <span>
