--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -1,123 +1,405 @@
-* {
-
-}
-
 body {
-    font-family: "Montserrat";
-    background-color: #ffffff;
-    color: #2EA7E0;
-}
-.card {
-    max-width: 600px;
-    margin: 150px auto 0;
-    background-color: #ffffff;
-    box-shadow: 0 10px 90px #00000024;
-    text-align: center;
-    font-size: 20px;
-    border-radius: 15px;
-    border :3px solid #2EA7E0
-}
+    font-family: "Montserrat", sans-serif;
+    background: white;
+    margin: 0;
+  }
 
-.card .card-header {
+  td{
+    height: 29px;
+  }
+
+  .container {
+    display: block;
+    max-width: 1280px;
+    width: 80%;
+    margin: 120px auto;
+  }
+
+  .page_name{
+    margin-left: 600px;
+    margin-bottom: 100px;
+    font-style: bold;
+    font-size: 2em;
+    font-weight: 700;
+    width: 500px;
+  }
+
+  .page_body{
+    width: 1280px;
+    height: 700px;
+    margin-top: 30px;
+  }
+  .left_section{
+    width: 320px;
+    height: 700px;
+    display: inline-block;
+  }
+  .profile{
+    width: 320px;
+    height: 600px;
+    background-color: rgb(236, 247, 254);
+    margin-top: 20px;
+    border-top-left-radius: 2em;
+    border-top-right-radius: 2em;
+    border-bottom-left-radius: 2em;
+    border-bottom-right-radius: 2em;
     position: relative;
-    height: 48px;
-}
+  }
 
-.card .card-header .profile-img {
-    width: 150px;
-    height: 150px;
-    border-radius: 1000px;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 8px solid #2EA7E0;
-    box-shadow: 0 0 20px #00000033;
+  .main_section{
+    display: inline-block;
+    width: 800px;
+    margin-left: 75px;
+  }
+    .main_head{
+        width: 900px;
 }
+  .main_write, .add_write{
+    display: inline-block;
+  }
 
-.card .card-header .profile-img:hover {
-    width: 180px;
-    height: 180px;
-    border: 8px solid #2EA7E0;
-}
-.card .card-body {
-    padding: 10px 40px;
-}
-
-.card .card-body .name {
-    margin-top: 30px;
-    font-size: 30px;
-    font-weight: bold;
-    color: #2EA7E0;
-}
-
-.card .card-body .name:hover {
-    margin-top: 30px;
-    font-size: 24px;
-    color: #2EA7E0;
-}
-
-.card .card-body .mail {
-    font-size: 14px;
-    color: #c2bdbd;
-}
-
-.card .card-body .mail:hover {
-    font-size: 16px;
-    color: #000000;
-}
-
-.card .card-body .job {
-    margin-top: 10px;
-    font-size: 14px;
-    color:#c2bdbd
-}
-.card .social-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 30px;
-}
-
-.card .social-links .social-icon {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    height: 40px;
-    width: 40px;
-    background-color: #2EA7E0;
-    color: #ffffff;
+  .main_write{
     font-size: 20px;
-    border-radius: 100%;
-    text-decoration: none;
-    margin: 0 13px 30px 0;
-}
+    font-weight: 550;
+  }
 
-.card .social-links .social-icon:last-child {
-    margin-right: 0;
-}
+  .add_write{
+    float: right;
+  }
 
-.card .social-links .social-icon:hover {
-    background-color: #d885af;
+  .left_write{
+    text-align: center;
+    font-weight: 600;
+    font-size: 20px;
+  }
+
+  .table_class{
+    width: 900px;
+    height: 600px;
+  }
+
+  .up_table{
+    margin-top: 20px;
+  }
+
+  table{
+    width: 100%;
+    border-top: 3px solid;
+    border-color: rgb(216, 216, 216);
+    border-collapse : collapse;
+  }
+
+  tr,td{
+    border-bottom: 1px solid rgb(216, 216, 216);
+    padding: 10px;
+  }
+
+  .left_table{
+    width: 200px;
+    background-color: rgb(236, 247, 254);
+  }
+
+  .down_write{
+    display: inline-block;
+  }
+
+  .inline{
+    border: none;
+    background-color: rgb(245, 245, 246);
+    width: 300px;
+    height: 37.5px;
+  }
+  .btn_ok{
+    margin: auto;
+    display: block;
+  }
+
+  .btn{
+    margin-left: 680px;
+    color: white;
+    background-color: rgb(62,176,247);
+    width:120px;
     height: 50px;
-    width: 50px;
-    text-decoration: none;
-}
-.card .card-footer {
-    background-color: #2EA7E0;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    padding: 20px 0 20px 0;
-}
-
-.card .card-footer .count {
-    font-size: 14px;
-}
-@media screen and (max-width: 575px) {
-    .card {
-        width: 96%;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    border-bottom-left-radius: 1em;
+    border-bottom-right-radius: 1em;
+    border-color: white;
+  }
+  .img{
+    width: 200px;
+    height: 200px;
+    background-color: aqua;
+    margin-left: 64px;
+    position: absolute;
+    margin-top: 30px;
+    border-radius: 50%;
     }
 
-    .card .card-body {
-        padding: 10px 20px;
+    .profile_name{
+      width: 50px;
+      justify-content: center;
+      height: 30px;
+      position: absolute;
+      margin-top: 270px;
+      margin-left: 75px;
     }
-}
+
+    .my_pro{
+      width: 70px;
+      justify-content: center;
+      height: 30px;
+      position: absolute;
+      margin-top: 330px;
+      margin-left: 75px;
+    }
+
+    .pro_name{
+      border-top-left-radius: 1em;
+      border-top-right-radius: 1em;
+      border-bottom-left-radius: 1em;
+      border-bottom-right-radius: 1em;
+    }
+
+    .my_pro_box{
+      width: 80px;
+      justify-content: center;
+      height: 80px;
+      position: absolute;
+      margin-top: 380px;
+      margin-left: 65px;
+    }
+
+    .box{
+      width: 200px;
+      height: 130px;
+      border-top-left-radius: 1em;
+      border-top-right-radius: 1em;
+      border-bottom-left-radius: 1em;
+      border-bottom-right-radius: 1em;
+    }
+
+    .save{
+      width: 120px;
+      position: absolute;
+      height: 60px;
+      margin-top: 530px;
+      margin-left: 125px;
+    }
+
+    #btn_save{
+      background-color: rgb(62,176,247);
+      border-color: white;
+      color: white;
+    }
+
+    .btn_save{
+      width: 70px;
+      height: 40px;
+      border-top-left-radius: 1em;
+      border-top-right-radius: 1em;
+      border-bottom-left-radius: 1em;
+      border-bottom-right-radius: 1em;
+    }body {
+        font-family: "Montserrat", sans-serif;
+        background: white;
+        margin: 0;
+      }
+    
+      td{
+        height: 29px;
+      }
+    
+      .container {
+        display: block;
+        max-width: 1280px;
+        width: 80%;
+        margin: 120px auto;
+      }
+    
+      .page_name{
+        margin-left: 600px;
+        margin-bottom: 100px;
+        font-style: bold;
+        font-size: 2em;
+        font-weight: 700;
+        width: 500px;
+      }
+    
+      .page_body{
+        width: 1280px;
+        height: 700px;
+        margin-top: 30px;
+      }
+      .left_section{
+        width: 320px;
+        height: 700px;
+        display: inline-block;
+      }
+      .profile{
+        width: 320px;
+        height: 600px;
+        background-color: rgb(236, 247, 254);
+        margin-top: 20px;
+        border-top-left-radius: 2em;
+        border-top-right-radius: 2em;
+        border-bottom-left-radius: 2em;
+        border-bottom-right-radius: 2em;
+        position: relative;
+      }
+    
+      .main_section{
+        display: inline-block;
+        width: 800px;
+        margin-left: 75px;
+      }
+        .main_head{
+            width: 900px;
+    }
+      .main_write, .add_write{
+        display: inline-block;
+      }
+    
+      .main_write{
+        font-size: 20px;
+        font-weight: 550;
+      }
+    
+      .add_write{
+        float: right;
+      }
+    
+      .left_write{
+        text-align: center;
+        font-weight: 600;
+        font-size: 20px;
+      }
+    
+      .table_class{
+        width: 900px;
+        height: 600px;
+      }
+    
+      .up_table{
+        margin-top: 20px;
+      }
+    
+      table{
+        width: 100%;
+        border-top: 3px solid;
+        border-color: rgb(216, 216, 216);
+        border-collapse : collapse;
+      }
+    
+      tr,td{
+        border-bottom: 1px solid rgb(216, 216, 216);
+        padding: 10px;
+      }
+    
+      .left_table{
+        width: 200px;
+        background-color: rgb(236, 247, 254);
+      }
+    
+      .down_write{
+        display: inline-block;
+      }
+    
+      .inline{
+        border: none;
+        background-color: rgb(245, 245, 246);
+        width: 300px;
+        height: 37.5px;
+      }
+      .btn_ok{
+        margin: auto;
+        display: block;
+      }
+    
+      .btn{
+        margin-left: 680px;
+        color: white;
+        background-color: rgb(62,176,247);
+        width:120px;
+        height: 50px;
+        border-top-left-radius: 1em;
+        border-top-right-radius: 1em;
+        border-bottom-left-radius: 1em;
+        border-bottom-right-radius: 1em;
+        border-color: white;
+      }
+      .img{
+        width: 200px;
+        height: 200px;
+        background-color: aqua;
+        margin-left: 64px;
+        position: absolute;
+        margin-top: 30px;
+        border-radius: 50%;
+        }
+    
+        .profile_name{
+          width: 50px;
+          justify-content: center;
+          height: 30px;
+          position: absolute;
+          margin-top: 270px;
+          margin-left: 75px;
+        }
+    
+        .my_pro{
+          width: 70px;
+          justify-content: center;
+          height: 30px;
+          position: absolute;
+          margin-top: 330px;
+          margin-left: 75px;
+        }
+    
+        .pro_name{
+          border-top-left-radius: 1em;
+          border-top-right-radius: 1em;
+          border-bottom-left-radius: 1em;
+          border-bottom-right-radius: 1em;
+        }
+    
+        .my_pro_box{
+          width: 80px;
+          justify-content: center;
+          height: 80px;
+          position: absolute;
+          margin-top: 380px;
+          margin-left: 65px;
+        }
+    
+        .box{
+          width: 200px;
+          height: 130px;
+          border-top-left-radius: 1em;
+          border-top-right-radius: 1em;
+          border-bottom-left-radius: 1em;
+          border-bottom-right-radius: 1em;
+        }
+    
+        .save{
+          width: 120px;
+          position: absolute;
+          height: 60px;
+          margin-top: 530px;
+          margin-left: 125px;
+        }
+    
+        #btn_save{
+          background-color: rgb(62,176,247);
+          border-color: white;
+          color: white;
+        }
+    
+        .btn_save{
+          width: 70px;
+          height: 40px;
+          border-top-left-radius: 1em;
+          border-top-right-radius: 1em;
+          border-bottom-left-radius: 1em;
+          border-bottom-right-radius: 1em;
+        }
