header사이즈 맞춤

--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="/css/footer.css">
         <link rel="stylesheet" href="/css/header.css">
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudf.lare.com/ajax/libs/font-awesome/6.2.0/css/all.mincss" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script src="/js/join.js"></script>
     </head>
     <body>
