--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="/css/join.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="/js/join.js"></script>
     </head>
@@ -46,7 +47,7 @@
           </div>
           <!-- password input -->
           <div class="input__block">
-             <input type="password" placeholder="Password" class="input" name="password"    />
+             <input type="password" placeholder="Password" class="input" name="pw"    />
           </div>
           <!-- sign in button -->
           <input type="submit" class="signin__btn" value="Sign in">
@@ -56,7 +57,7 @@
           <p>OR</p>
         </div>
         <!-- google button -->
-        <button class="sign_in__btn">
+        <button class="sign_up__btn">
           <a href="/auth/sign_up">Sign Up</a>
         </button>
       </div>
