--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -4,12 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="/css/join.css">
-<<<<<<< HEAD:views/sign_up.ejs
         <link rel="stylesheet" href="/css/footer.css">
         <link rel="stylesheet" href="/css/header.css">
-=======
-        <title>HaeYaGYM</title>
->>>>>>> master:views/sign_up.html
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="/js/join.js"></script>
     </head>
@@ -47,43 +44,43 @@
           
           <!-- email input -->
           <div class="first-input input__block first-input__block">
-             <input type="email" placeholder="Email" class="input" id="email"   />
+             <input type="email" placeholder="Email" class="input" id="email"  name="email" />
           </div>
           
           <!-- password input -->
           <div class="input__block">
-             <input type="password" placeholder="Password" class="input" id="pw"    />
+             <input type="password" placeholder="Password" class="input" id="pw" name="password"   />
           </div>
           
           <!-- repeat password input -->
           <div class="input__block">
-            <input type="password" placeholder="repeat_password" class="input" id="pw2"    />
+            <input type="password" placeholder="repeat_password" class="input" id="pw2" name="pw2"   />
          </div>
 
          <!-- name -->
          <div class="input__block">
-          <input type="text" placeholder="name" class="input" id="name"    />
+          <input type="text" placeholder="name" class="input" id="name"  name="name"  />
          </div>
 
          <!-- nickname -->
          <div class="input__block">
-            <input type="text" placeholder="nickname" class="input" id="nick"    />
+            <input type="text" placeholder="nickname" class="input" id="nick"  name="nick"  />
          </div>
 
          <!-- weight/height -->
          <div class="input__block">
             <div class="body_box">
-            <input type="text" placeholder="weight" class="input" id="weight"    />
-            <input type="text" placeholder="height" class="input" id="height"    />
+            <input type="text" placeholder="weight" class="input" id="weight"  name="weight"  />
+            <input type="text" placeholder="height" class="input" id="height"  name="height"  />
         </div>
         </div>
 
          <!-- birth -->
          <div class="input__block">
         <div class=birth_box>
-            <input type="text" placeholder="birth" class="input" id="birth"    />
-            <input type="text" placeholder="month" class="input" id="month"    />
-            <input type="text" placeholder="day" class="input" id="day"    />
+            <input type="text" placeholder="year" class="input" id="year"   name="year" />
+            <input type="text" placeholder="month" class="input" id="month"  name="month"  />
+            <input type="text" placeholder="day" class="input" id="day"   name="day" />
         </div>
         </div>
 
