--- a/views/board_list.ejs
+++ b/views/board_list.ejs
@@ -22,8 +22,17 @@
         <div id="header__main">
             <a href="/"><img src="/logo/logo.png" id="header__logo"></a>
             <nav>
-                <a href="/auth/sign_in">로그인</a>
-                <a href="/auth/sign_up">회원가입</a>
+                <% if(isOwner == false) {%>
+                    <a href="/Board">커뮤니티</a> 
+                    <a href="/auth/sign_in">로그인</a>
+                    <a href="/auth/sign_up">회원가입</a>
+                    <% }else{ %>
+                        <%= email %>
+                        <a href="/MyPage">마이페이지</a> 
+                        <a href="/Calendar">운동달력</a> 
+                        <a href="/Board">커뮤니티</a> 
+                        <a href="/auth/logout">로그아웃</a>   
+                        <% } %>
             </nav>
         </div>
     </header>
