--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body text="#000;" link="#000;" alink="#000;" vlink="#000;">
     <header>
         <div id="header__mobileAd">
             <span>
@@ -108,7 +108,7 @@
                     </div>
                     <i class="fa-solid fa-calendar-days"></i>
                     <p>
-                        <a href="/calendar"><strong>운동 기록달력</strong><br></a>
+                        <strong><a href="/calendar">운동 기록달력</a></strong><br>
                         (일별로 내 운동 확인)
                     </p>
                     <span>
