--- a/views/sign_up.html
+++ b/views/sign_up.html
@@ -17,9 +17,6 @@
           <li>
             <a href="#" id="signup">회원가입</a>
           </li>
-          <li>
-            <a href="#" id="reset">초기화</a>
-          </li>
         </ul>
         
         <!-- Form -->
@@ -37,33 +34,33 @@
           
           <!-- repeat password input -->
           <div class="input__block">
-            <input type="password" placeholder="repeat_password" class="input" id="pw2"    />
+            <input type="password" placeholder="Repeat_Password" class="input" id="pw2"    />
          </div>
 
          <!-- name -->
          <div class="input__block">
-          <input type="text" placeholder="nickname" class="input" id="name"    />
+          <input type="text" placeholder="Name" class="input" id="name"    />
          </div>
 
          <!-- nickname -->
          <div class="input__block">
-            <input type="text" placeholder="nickname" class="input" id="nick"    />
+            <input type="text" placeholder="Nickname" class="input" id="nick"    />
          </div>
 
          <!-- weight/height -->
          <div class="input__block">
             <div class="body_box">
-            <input type="text" placeholder="weight" class="input" id="weight"    />
-            <input type="text" placeholder="height" class="input" id="height"    />
+            <input type="text" placeholder="Weight" class="input" id="weight"    />
+            <input type="text" placeholder="Height" class="input" id="height"    />
         </div>
         </div>
 
          <!-- birth -->
          <div class="input__block">
         <div class=birth_box>
-            <input type="text" placeholder="birth" class="input" id="birth"    />
-            <input type="text" placeholder="month" class="input" id="month"    />
-            <input type="text" placeholder="day" class="input" id="day"    />
+            <input type="text" placeholder="Birth" class="input" id="birth"    />
+            <input type="text" placeholder="Month" class="input" id="month"    />
+            <input type="text" placeholder="Day" class="input" id="day"    />
         </div>
         </div>
 
