--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -32,7 +32,7 @@
                     <a href="/auth/logout">로그아웃</a>   
             </nav>
         </div>
-    </header>ㄴ
+    </header>
     <div class="container">
         <div class="page_name"><strong>마이페이지</strong></div>
         <div class="page_body">
@@ -40,8 +40,9 @@
                 <div class="left_write">내 프로필</div>
                 <div class="profile">
                     <div class="img">
-
+                    
                     </div>
+                 
                     <div class="profile_name">
                         <input type="text" id="pro_name" class="pro_name">
                     </div>
@@ -59,7 +60,7 @@
             <div class="main_section">
                 <div class="main_head">
                 <div class="main_write">내 정보</div>
-                <div class="add_write">표시는 반드시 입력하셔야 하는 항목입니다 *</div>
+                <div class="add_write">*표시는 반드시 입력하셔야 하는 항목입니다 </div>
             </div>
             <div class="table_class">
                 <table class="up_table">
