--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="/css/join.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="/js/join.js"></script>
@@ -52,6 +53,9 @@
           <!-- sign in button -->
           <input type="submit" class="signin__btn" value="Sign in">
         </form>
+          <!-- sign in button with google-->
+          <input type="submit" class="signin_btn_google" value="Sign in with google">
+        </form>
         <!-- separator -->
         <div class="separator">
           <p>OR</p>
@@ -59,6 +63,10 @@
         <!-- google button -->
         <button class="sign_up__btn">
           <a href="/auth/sign_up">Sign Up</a>
+        </button>
+
+        <button class="sign_up__btn">
+          <a href="/auth/sign_up">Sign Up with google</a>
         </button>
       </div>
       
