--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -5,7 +5,6 @@ html, body{
    padding: 0;
  }
  .main{
-   width: 100%;
    display: block;
    background: white;
  }
@@ -127,9 +126,9 @@ html, body{
      display: flex;
      align-items: center;
      justify-content:  center;
-     width: 100vw;
-     height: 100vh;
      background-color: white;
+     margin-top: 55px;
+     margin-bottom: 55px;
    }
    .content-wrap{
      width: 800px;
