--- a/public/css/commu_style.css
+++ b/public/css/commu_style.css
@@ -1,12 +1,9 @@
-* {
+body {
     margin: 0;
     padding: 0;
-    list-style: none;
-    text-decoration: none;
-    border-collapse: collapse;
-    margin: 0px;
-    padding: 0px;
-
+    border: 0;
+    font: inherit;
+    vertical-align: baseline;
 }
 
 html {
