--- a/public/css/join.css
+++ b/public/css/join.css
@@ -112,8 +112,9 @@ form .input__block input.repeat__password {
   display: none;
   transition: 0.2s linear;
 }
-form .signin__btn {
-  background: #e91e63;
+form .signin__btn,
+.signin_btn_google {
+  background: rgb(62, 176, 247);
   color: white;
   display: block;
   width: 92.5%;
@@ -125,10 +126,11 @@ form .signin__btn {
   cursor: pointer;
   font-size: 14px;
   font-family: "Montserrat", sans-serif;
-  box-shadow: 0 15px 30px rgba(233, 30, 99, 0.36);
+  box-shadow: 0 15px 30px rgba(131, 131, 131, 0.36);
   transition: 0.2s linear;
 }
-form .signin__btn:hover {
+form .signin__btn:hover,
+form .signin_btn_google {
   box-shadow: 0 0 0 rgba(233, 30, 99, 0);
 }
 
