--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -25,7 +25,7 @@
         <div id="header__main">
             <a href="/"><img src="/logo/logo.png" id="header__logo"></a>
             <nav>
-                <%= nick %>
+                    <%= email %>
                     <a href="/MyPage">마이페이지</a> 
                     <a href="/Calendar">운동달력</a> 
                     <a href="/Board">커뮤니티</a> 
