--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
                 <a href="/auth/sign_up">회원가입</a>
                 <% } else { %>
                     <%= email %>
+                    <%= nick %>
                     <a href="/MyPage">마이페이지</a> 
                     <a href="/Calendar">운동달력</a> 
                     <a href="/Board">커뮤니티</a> 
