--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -6,8 +6,9 @@
   <link rel="stylesheet" href="assets/styles/index.css">
   <link rel="stylesheet" href="/css/header.css">
   <link rel="stylesheet" href="/css/calendar.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="/css/footer.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
   <title>HaeYaGym</title>
 </head>
 <body>
@@ -46,9 +47,9 @@
           <div id="main-date" class="main-date"></div>
         </div>
         <div class="todo-wrap">
-          <div class="todo-title">Todo List</div>
+          <div class="todo-title">Today's Workout</div>
           <div class="input-wrap">
-            <input type="text" placeholder="please write here!!" id="input-box" class="input-box">
+            <input type="text" placeholder="Write Here!!" id="input-box" class="input-box">
             <button type="button" id="input-data" class="input-data">작성하기</button>
             <div id="input-list" class="input-list"></div>
           </div>
