--- a/views/index.ejs
+++ b/views/index.ejs
@@ -150,7 +150,7 @@
             <div id="footer__contact">
                 <p>고객센터</p>
                 <div id="footer__contact__kakao">
-                    <img src="img/kakaotalk_sharing_btn_medium.png" >
+                    <img src="img/kakao.png" >
                     <span>카카오톡 상담</span>
                 </div>
                 <span>평일 09:00 ~ 18:00(점심시간 13:00 ~ 14:00)</span>
