--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -1,6 +1,6 @@
 html, body{
    background-color: #FFFFFF;
-   font-family: 'Roboto', sans-serif;
+   font-family: 'Noto Sans KR', sans-serif;
    margin: 0;
    padding: 0;
  }
