--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,6 +6,7 @@
 }
 
 body{
+    font-family: 'Noto Sans KR', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
