--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -1,7 +1,7 @@
 body {
-  font-family: "Montserrat", sans-serif;
   background: white;
   margin: 0;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 td{
@@ -19,24 +19,25 @@ td{
   margin-left: 600px;
   margin-bottom: 100px;
   font-style: bold;
-  font-size: 2em;
+  font-size: 20px;
   font-weight: 700;
   width: 500px;
 }
 
 .page_body{
   width: 1280px;
-  height: 700px;
+  height: 550px;
   margin-top: 30px;
 }
 .left_section{
+  margin-left: 50px;
   width: 320px;
   height: 700px;
   display: inline-block;
 }
 .profile{
-  width: 320px;
-  height: 600px;
+  width: 200px;
+  height: 420px;
   background-color: rgba(236, 247, 254, 0.966);
   margin-top: 20px;
   border-top-left-radius: 2em;
@@ -60,7 +61,6 @@ td{
 }
 
 .main_write{
-  font-size: 20px;
   font-weight: 550;
 }
 
@@ -69,14 +69,13 @@ td{
 }
 
 .left_write{
-  text-align: center;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .table_class{
-  width: 900px;
-  height: 600px;
+  width: 700px;
+  height: 400px;
 }
 
 .up_table{
@@ -84,7 +83,7 @@ td{
 }
 
 table{
-  width: 100%;
+  width: 700px;
   border-top: 3px solid;
   border-color: rgb(216, 216, 216);
   border-collapse : collapse;
@@ -97,6 +96,7 @@ tr,td{
 
 .left_table{
   width: 200px;
+  font-size: 15px;
   background-color: rgb(236, 247, 254);
 }
 
@@ -116,11 +116,11 @@ tr,td{
 }
 
 .btn{
-  margin-left: 680px;
+  margin-left: 600px;
   color: white;
   background-color: rgb(62,176,247);
-  width:120px;
-  height: 50px;
+  width:80px;
+  height: 40px;
   border-top-left-radius: 1em;
   border-top-right-radius: 1em;
   border-bottom-left-radius: 1em;
@@ -132,10 +132,10 @@ tr,td{
 }
 .img{
   background-image: url(/logo/logo.png);
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   background-color: white;
-  margin-left: 64px;
+  margin-left: 50px;
   position: absolute;
   margin-top: 30px;
   border-radius: 50%;
@@ -153,15 +153,20 @@ tr,td{
   }
 
   .my_pro{
+    
+    font-size: 14px;
     width: 70px;
-    justify-content: center;
     height: 30px;
     position: absolute;
-    margin-top: 330px;
-    margin-left: 75px;
+    margin-top: 320px;
+    margin-left: 95px;
   }
 
   .pro_name{
+    background-color: white;
+    width: 120px;
+    height: 30px;
+    margin-right: 30px;
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
     border-bottom-left-radius: 1em;
@@ -170,11 +175,10 @@ tr,td{
 
   .my_pro_box{
     width: 80px;
-    justify-content: center;
     height: 100px;
     position: absolute;
     margin-top: 380px;
-    margin-left: 65px;
+    margin-left: 24px;
   }
 
   .box{
@@ -191,7 +195,7 @@ tr,td{
     position: absolute;
     height: 60px;
     margin-top: 530px;
-    margin-left: 125px;
+    margin-left: 90px;
   }
 
   #btn_save{
@@ -215,6 +219,14 @@ tr,td{
       margin: 0;
     }
   
+    td > .left_table{
+      width: 240px;
+    }
+
+    td > .right_table{
+      width: 450px;
+    }
+
     td{
       height: 29px;
     }
@@ -223,31 +235,31 @@ tr,td{
       display: block;
       max-width: 1280px;
       width: 80%;
-      margin: 120px auto;
+      margin: 100px auto;
     }
   
     .page_name{
       margin-left: 600px;
       margin-bottom: 100px;
       font-style: bold;
-      font-size: 2em;
+      font-size: 20px;
       font-weight: 700;
       width: 500px;
     }
   
     .page_body{
       width: 1280px;
-      height: 700px;
+      height: 550px;
       margin-top: 30px;
     }
     .left_section{
       width: 320px;
-      height: 700px;
+      height: 400px;
       display: inline-block;
     }
     .profile{
-      width: 320px;
-      height: 600px;
+      width: 250px;
+      height: 420px;
       background-color: rgb(236, 247, 254);
       margin-top: 20px;
       border-top-left-radius: 2em;
@@ -259,7 +271,7 @@ tr,td{
   
     .main_section{
       display: inline-block;
-      width: 800px;
+      width: 500px;
       margin-left: 75px;
     }
       .main_head{
@@ -270,7 +282,7 @@ tr,td{
     }
   
     .main_write{
-      font-size: 20px;
+      font-size: 16px;
       font-weight: 550;
     }
   
@@ -279,14 +291,14 @@ tr,td{
     }
   
     .left_write{
-      text-align: center;
+      margin-left: 90px;
       font-weight: 600;
-      font-size: 20px;
+      font-size: 16px;
     }
   
     .table_class{
-      width: 900px;
-      height: 600px;
+      width: 700px;
+      height: 400px;
     }
   
     .up_table{
@@ -294,7 +306,7 @@ tr,td{
     }
   
     table{
-      width: 100%;
+      width: 700px;
       border-top: 3px solid;
       border-color: rgb(216, 216, 216);
       border-collapse : collapse;
@@ -302,12 +314,16 @@ tr,td{
   
     tr,td{
       border-bottom: 1px solid rgb(216, 216, 216);
-      padding: 10px;
+      padding: 4px;
     }
   
     .left_table{
       width: 200px;
       background-color: rgb(236, 247, 254);
+    }
+
+    .left_table, .right_table{
+      height: 50px;
     }
   
     .down_write{
@@ -326,11 +342,11 @@ tr,td{
     }
   
     .btn{
-      margin-left: 680px;
+      margin-left: 600px;
       color: white;
       background-color: rgb(62,176,247);
-      width:120px;
-      height: 50px;
+      width:80px;
+      height: 40px;
       border-top-left-radius: 1em;
       border-top-right-radius: 1em;
       border-bottom-left-radius: 1em;
@@ -338,10 +354,10 @@ tr,td{
       border-color: white;
     }
     .img{
-      width: 200px;
-      height: 200px;
+      width: 150px;
+      height: 150px;
       background-color: white;
-      margin-left: 64px;
+      margin-left: 50px;
       position: absolute;
       margin-top: 30px;
       border-radius: 50%;
@@ -352,17 +368,16 @@ tr,td{
         justify-content: center;
         height: 30px;
         position: absolute;
-        margin-top: 270px;
-        margin-left: 75px;
+        margin-top: 290px;
+        margin-left: 70px;
       }
   
       .my_pro{
         width: 70px;
-        justify-content: center;
         height: 30px;
         position: absolute;
-        margin-top: 330px;
-        margin-left: 75px;
+        margin-top: 320px;
+        margin-left: 95px;
       }
   
       .pro_name{
@@ -376,11 +391,10 @@ tr,td{
   
       .my_pro_box{
         width: 80px;
-        justify-content: center;
         height: 80px;
         position: absolute;
         margin-top: 380px;
-        margin-left: 65px;
+        margin-left: 24px;
       }
   
       .box{
@@ -399,7 +413,7 @@ tr,td{
         position: absolute;
         height: 60px;
         margin-top: 530px;
-        margin-left: 125px;
+        margin-left: 90px;
       }
   
       #btn_save{
@@ -415,4 +429,49 @@ tr,td{
         border-top-right-radius: 1em;
         border-bottom-left-radius: 1em;
         border-bottom-right-radius: 1em;
+      }
+
+      .table_in{
+        margin-left: 10px;
+        width: 250px;
+        height: 35px;
+        background-color: rgb(216, 216, 216);
+        display: inline-block;
+      }
+
+      .change{
+        width: 120px;
+        height: 35px;
+        float: right;
+        margin-right: 30px;
+      }
+
+      .pwd_change{
+        width: 120px;
+        height: 30px;
+        margin-top: 10px;
+        margin-right: 100px;
+        background-color: rgb(236, 247, 254);
+        border: 0;
+        outline: 0;
+        border-top-left-radius: 1em;
+        border-top-right-radius: 1em;
+        border-bottom-left-radius: 1em;
+        border-bottom-right-radius: 1em;
+      }
+
+      .type_pwd{
+        width: 300px;
+        height: 60px;
+      }
+
+
+      .pwd_container{
+        width: 500px;
+        height: 50.1px;
+        display: inline-block;
+      }
+
+      #pwd_table_in{
+        margin-top: 7px;
       }
