--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -28,7 +28,7 @@
                 <%= nick %>
                     <a href="/MyPage">마이페이지</a> 
                     <a href="/Calendar">운동달력</a> 
-                    <a href="/Board">커뮤니티</a> 
+                    <a href="/Board/list">커뮤니티</a>
                     <a href="/auth/logout">로그아웃</a>   
             </nav>
         </div>
