--- a/views/board_view.ejs
+++ b/views/board_view.ejs
@@ -29,7 +29,7 @@
                     <a href="/auth/sign_in">로그인</a>
                     <a href="/auth/sign_up">회원가입</a>
                     <% }else{ %>
-                        <%= email %>
+                        <%= nick %>
                         <a href="/MyPage">마이페이지</a> 
                         <a href="/Calendar">운동달력</a> 
                         <a href="/Board">커뮤니티</a> 
